Fix Loading component not showing in the middle of the screen

--- a/src/index.css
+++ b/src/index.css
@@ -21,6 +21,7 @@ main {
 }
 
 .loading {
+    grid-column: 1 / -1;
     justify-self: center;
 }
 
